# wasm-techtalk

./: README.md
lesson-1/: extend_and_wrap.wat  math.wasm  math.wat  node-wasm.js
lesson-2/: memory-export.wasm  memory-export.wat  memory-import.wasm  memory-import.wat  node-wasm-export.js  node-wasm-import.js
lesson-3/: go.mod  go.sum  main.go
lesson-4/: go.mod  go.sum  main.go
lesson-4/common/: common.go
lesson-4/fibonacci/: Makefile  fibonacci.go  fibonacci.wasm  fibonacci.wat
lesson-4/plugin/: main.go  md5.go  md5.wasm
lesson-5/: Makefile  go.sum  main  main.go
lesson-6/: .gitignore
lesson-6/wasm-component-exports/: Cargo.toml
lesson-6/wasm-component-exports/plugin/: BUILD  Cargo.toml  math.component.wasm  mathguest.component.wasm  wit.component.wasm
lesson-6/wasm-component-exports/plugin/src/: lib.rs
lesson-6/wasm-component-exports/plugin/wit/: math.wit
lesson-6/wasm-component-exports/src/: main.rs
lesson-6/wasm-component-imports-exports/: Cargo.toml
lesson-6/wasm-component-imports-exports/plugin/: BUILD  Cargo.toml  pubsub.component.wasm
lesson-6/wasm-component-imports-exports/plugin/src/: lib.rs
lesson-6/wasm-component-imports-exports/plugin/wit/: pubsub.wit
lesson-6/wasm-component-imports-exports/src/: main.rs
lesson-6/wasm-component-md5/: Cargo.toml
lesson-6/wasm-component-md5/plugin/: BUILD  go.mod  md5.component.wasm  md5.component.wat  md5.embed.wasm  md5.go.tgz  md5.rust.tgz  md5.wasm  md5_impl.go  wasi_snapshot_preview1.wasm
lesson-6/wasm-component-md5/plugin/md5/: md5.c  md5.go  md5.h  md5_types.go
lesson-6/wasm-component-md5/plugin/wit/: md5.wit
lesson-6/wasm-component-md5/src/: main.rs
(+2 files in other folders)
