[package]
name = "wasm-component-md5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "299131ae2d6655c49138bfab2c4469650763ef3b", features = ["component-model"] }
wit-bindgen = "0.6.0"
wasi-common = { git = "https://github.com/bytecodealliance/preview2-prototyping", rev = "bba1b8be74b46d2bc8e12845845ebf90789fdb73" }
wasi-cap-std-sync = { git = "https://github.com/bytecodealliance/preview2-prototyping", rev = "bba1b8be74b46d2bc8e12845845ebf90789fdb73" }
